# word2keypress

./: .gitignore  .travis.yml  HowToRun.ipynb  LICENSE  README  README.md  _keyboard.c  _keyboard.pyx  keyboard.py  setup.cfg  setup.py  test_keyboard.py  tox.ini  upload.sh
src/word2keypress/: __init__.py  _keyboard.c  _keyboard.pyx  adjacency_graphs.c  adjacency_graphs.py  test_weighted_edit.py  typos.py  weight_matrix.py  weighted_edist.py
test/: context.py  test_keyboard.py  test_weighted_edit.py
tests/: context.py  test_keyboard.py  test_weighted_edit.py
word2keypress/: __init__.py  _keyboard.c  _keyboard.pyx
